--- a/SkyTakeout-server/src/main/resources/application.yml
+++ b/SkyTakeout-server/src/main/resources/application.yml
@@ -19,6 +19,8 @@ mybatis:
   configuration:
     #开启驼峰命名
     map-underscore-to-camel-case: true
+    #mybatis日志输出到控制台
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 logging:
   level:
