--- a/SkyTakeout-server/src/main/resources/application.yml
+++ b/SkyTakeout-server/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     url: jdbc:mysql://${td.datasource.host}:${td.datasource.port}/${td.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: ${td.datasource.username}
     password: ${td.datasource.password}
+  servlet:
+    multipart:
+      max-file-size: 1024MB
+      max-request-size: 2048MB
 
 mybatis:
   #mapper配置文件
