--- a/SkyTakeout-server/src/main/resources/application-dev.yml
+++ b/SkyTakeout-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ td:
     database: reggie_takeout
     username: root
     password: 1234
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 0
