--- a/SkyTakeout-server/src/main/resources/application-dev.yml
+++ b/SkyTakeout-server/src/main/resources/application-dev.yml
@@ -11,3 +11,7 @@ td:
     port: 6379
     password: 123456
     database: 0
+
+  wechat:
+    appid: wx98e6a5a30f0ad550
+    secret: 78adbc188ade4b6beb16e581a9ba42ee
