--- a/SkyTakeout-server/src/main/resources/application.yml
+++ b/SkyTakeout-server/src/main/resources/application.yml
@@ -49,6 +49,15 @@ td:
     # 设置前端传递过来的令牌名称
     admin-token-name: token
 
+    user-secret-key: wx
+    # 设置jwt过期时间
+    user-ttl: 7200000
+    # 设置前端传递过来的令牌名称
+    user-token-name: authentication
+  wechat:
+    appid: ${td.wechat.appid}
+    secret: ${td.wechat.secret}
+
 # springdoc-openapi项目配置
 springdoc:
   swagger-ui:
